# Easy-Note

./: .gitignore  Project-Structure.md  README.md  main.py  pyproject.toml  sample.txt
prompts/: extract_notes.md
src/: ingest.py  output.py  process.py
