[project]
name = "the-watcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "python-dotenv>=1.0.0",
    "google>=3.0.0",
    "google-genai>=1.73.1",
    "python-docx>=1.2.0",
    "pdfplumber>=0.11.9",
    "beautifulsoup4>=4.14.3",
    "bs4>=0.0.2",
]
